# vps-sentinel

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASE.md  SECURITY.md  install.sh  reload.sh  stop.sh  update.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
config/: config.example.toml
crates/sentinel-agent/: Cargo.toml
crates/sentinel-agent/src/: active_response.rs  advice.rs  attack_fingerprint.rs  daemon.rs  evidence_score.rs  findings.rs  fleet.rs  incident.rs  lib.rs  local_behavior.rs  maintenance.rs  node_metrics.rs  panel.rs  path_match.rs  registry.rs  report.rs  resource_budget.rs  risk_score.rs  runtime_probe.rs  scanner.rs  scenario_tests.rs  scheduler.rs  security_wizard.rs  service_profile.rs  suppress_rules.rs  threat_intel.rs  timeline.rs
crates/sentinel-agent/src/baseline/: approval.rs  diff.rs  drift.rs  mod.rs  semantic.rs  snapshot.rs
crates/sentinel-agent/src/collectors/: audit.rs  config_risk.rs  docker.rs  ebpf_bridge.rs  file_integrity.rs  firewall.rs  gpu.rs  log_integrity.rs  mod.rs  network.rs  package_manager.rs  persistence.rs  process.rs  rootkit.rs  ssh.rs  users.rs  web_logs.rs
crates/sentinel-agent/src/detectors/: audit_rules.rs  behavior_profile.rs  command_profile.rs  config_rules.rs  docker_rules.rs  external_rules.rs  file_rules.rs  mod.rs  network_rules.rs  persistence_rules.rs  process_rules.rs  risk.rs  rootkit_rules.rs  rule_matrix_tests.rs  ssh_rules.rs  tamper_rules.rs  user_rules.rs  web_rules.rs
crates/sentinel-agent/src/detectors/command_profile/: parsing.rs  tests.rs
crates/sentinel-agent/src/detectors/network_rules/: tests.rs
crates/sentinel-agent/src/notify/: bark.rs  content.rs  dingtalk.rs  email.rs  feishu.rs  gotify.rs  i18n.rs  mod.rs  ntfy.rs  render.rs  serverchan.rs  telegram.rs  template.rs  webhook.rs
crates/sentinel-agent/src/notify/render/: escape.rs  html.rs  telegram.rs  tests.rs  text.rs
crates/sentinel-agent/src/rules/: engine.rs  mod.rs  model.rs  packs.rs  system.rs
crates/sentinel-agent/src/scanner/: event_budget.rs  tests.rs
crates/sentinel-agent/src/storage/: mod.rs  sqlite.rs
crates/sentinel-agent/src/utils/: command.rs  fs.rs  ip.rs  memory.rs  mod.rs  package.rs  procfs.rs  redact.rs  ssh_config.rs  text.rs
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: main.rs
crates/sentinel-cli/src/commands/: advice.rs  baseline.rs  blocks.rs  config.rs  doctor.rs  ebpf.rs  events.rs  findings.rs  fingerprints.rs  fleet.rs  incidents.rs  init.rs  maintenance.rs  menu.rs  mod.rs  notify.rs  panel.rs  reload.rs  report.rs  rules.rs  scan.rs  service_profile.rs  status.rs  storage.rs  wizard.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: config.rs  error.rs  event.rs  evidence_schema.rs  finding.rs  lib.rs  panel_auth.rs  severity.rs  time_window.rs
crates/sentinel-core/src/config/: notifications.rs  sections.rs
crates/sentinel-panel/: Cargo.toml
crates/sentinel-panel/src/: auth.rs  geoip.rs  http_security.rs  ingest.rs  main.rs  panel_contract.rs  repository.rs  stream.rs  tests.rs
docs/: business-test-report-2026-06-17.md  config-reference.md  config-reference.zh-CN.md  deployment.md  deployment.zh-CN.md  false-positive.md  false-positive.zh-CN.md  implementation-audit-2026-06-17.md  implementation-audit-2026-06-17.zh-CN.md  notifier-plugin.md  notifier-plugin.zh-CN.md  open-source-license.md  open-source-license.zh-CN.md  panel-architecture.md  panel-architecture.zh-CN.md  panel-deployment.md  panel-deployment.zh-CN.md  panel-themes.md  panel-themes.zh-CN.md  panel.md  panel.zh-CN.md  privacy.md  privacy.zh-CN.md  risk-test-report.md  rule-writing.md  rule-writing.zh-CN.md  threat-model.md  threat-model.zh-CN.md
packaging/: install.sh
packaging/systemd/: vps-sentinel.service
panel/cloudflare/: panel-contract.generated.js  schema.sql  worker.js  wrangler.toml.example
panel/self-host/: schema.mysql.sql  schema.postgres.sql  schema.sqlite.sql
panel/shared/: contract.env  contract.json
panel/ui/: next.config.mjs  package-lock.json  package.json
panel/ui/app/: globals.css  layout.tsx  page.tsx
panel/ui/app/styles/: accessibility.css  base.css  breakpoint-laptop.css  breakpoint-large.css  breakpoint-phone.css  breakpoint-tablet.css  data-surfaces.css  density.css  feature-pages.css  node-list.css  node-toolbar.css  overview.css  responsive.css  shell.css  tables.css  theme-contract.css  tokens.css
panel/ui/public/themes/default/: theme.json
panel/ui/scripts/: sync-web.mjs
panel/ui/src/: types.ts
panel/ui/src/components/: Charts.tsx  Controls.tsx  DetailDrawer.tsx  Filters.tsx  Primitives.tsx
panel/ui/src/features/: Pages.tsx  PanelApp.tsx
panel/ui/src/lib/: api.ts  datasets.ts  format.ts  i18n.ts  panel-contract.generated.ts  rbac.ts  security.ts
panel/web/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  app.js  components.js  dashboard.js  datasets.js  i18n.js  index.html  index.txt  styles.css
panel/web/_next/static/chunks/: 0-rl5j04g59x0.js  03obfn4wyfn_t.css  04pyh-bq3mof_.js  08d0rvf3_k45i.css  08dstcru9m_uu.css  09bjg5qrn2im8.js  0b3zx5cfyy1a3.js  0b7m9l4_6p97x.js  0ez9rzh5ar41n.js  0fjk5xj-b6iqp.css  0gs7_2kpi1fth.js  0i_jf6wdur96w.js  0jm-bb4v1m16q.js  0leksbe8wl8nt.js  0npdhnzuk0vu1.css  0pchhmaleh_hi.css  0pu-bp0x1l277.js  0v442q3ml9nr_.js  10n41684by85h.js  1141_me2z300a.js  13mab1p2kdljd.css  1ap4mxbfosbph.css  1bdblb1y_hny0.css  1c6mx8gjfcy2x.css  1cn4mywpjx_t4.js  1j663bb5h9blq.css  1n0-7r-x2wx12.js  1ndnzamf0yijw.js  1ovv3_j4dpz__.css  1pey1d8oru8gf.js  1rr19b7582msp.css  (+22 more)
panel/web/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt
panel/web/_not-found/__next._not-found/: __PAGE__.txt
panel/web/themes/default/: theme.css  theme.json
scripts/: create-panel-env.sh  deploy-cloudflare-panel.sh  generate-panel-contract.mjs  vs-fleet.sh
tests/: install_script_smoke.sh
