[workspace]
members = [
    "crates/sentinel-core",
    "crates/sentinel-agent",
    "crates/sentinel-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
license = "MIT"
repository = "https://github.com/example/vps-sentinel"
homepage = "https://github.com/example/vps-sentinel"
description = "A lightweight Rust intrusion-signal monitor for Linux VPS hosts."

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
glob = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
