[package]
name = "sentinel-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Collectors, detectors, storage, notification, and scan orchestration for vps-sentinel."

[dependencies]
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
glob.workspace = true
lettre.workspace = true
libc.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sentinel-core = { path = "../sentinel-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
