[package]
name = "sentinel-agent"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Collectors, detectors, storage, notification, and scan orchestration for vps-sentinel."

[dependencies]
async-trait.workspace = true
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
glob.workspace = true
hmac.workspace = true
lettre.workspace = true
libc.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sentinel-core = { path = "../sentinel-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
