[package]
name = "sentinel-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for vps-sentinel."

[[bin]]
name = "vps-sentinel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
sentinel-agent = { path = "../sentinel-agent" }
sentinel-core = { path = "../sentinel-core" }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
