[package]
name = "sentinel-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core data model and configuration for vps-sentinel."

[dependencies]
blake3.workspace = true
chrono.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
