[package]
name = "sentinel-core"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core data model and configuration for vps-sentinel."

[dependencies]
blake3.workspace = true
chrono.workspace = true
glob.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
